# group_manual

./: .buildinfo  README.md  genindex.html  index.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy.yml
_sources/: index.md
_sources/computing/: conda.md  conda_env.md  hpe_dsi.md  htc.md  laptop.md  vasp.md  windows.md
_sources/computing/high_throughput/: atomate2.md  database.md  fireworks.md
_sources/computing/software/: index.md  vasp.md
_sources/contributing/: edit.md  local_build.md
_sources/devtool/: cli.md  github.md  text_editor.md
_sources/onboarding/: guide.md
_sources/writing/: latex.md
computing/: conda.html  conda_env.html  gulp.html  high_throughput.html  hpe_dsi.html  htc.html  laptop.html  vasp.html  windows.html
computing/high_throughput/: atomate2.html  database.html  fireworks.html  index.html
computing/software/: gulp.html  index.html  vasp.html
contributing/: edit.html  local_build.html
devtool/: cli.html  git.html  github.html  ssh.html  text_editor.html
docs/: _config.yml  _toc.yml  index.md  intro.md
docs/computing/: GULP  WSL_set_up_guide.md  conda.md  gulp.md  high_throughput.md  hpe_dsi.md  laptop.md  vasp.md  windows.md
docs/computing/high_throughput/: atomate2.md  database.md  fireworks.md  index.md
docs/computing/software/: gulp.md  vasp.md
docs/contributing/: edit.md  local_build.md
docs/devtool/: cli.md  git.md  github.md  ssh.md  text_editor.md
docs/onboarding/: guide.md
docs/writing/: latex.md
onboarding/: guide.html
writing/: latex.html
