[build-system]
requires = ["setuptools >= 42", "versioningit >= 2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["docs"]

[project]
name = "wen_group_manual"
requires-python = ">=3.9"
authors = [{name = "The Wen Group", email = "mjwengroup@gmail.com"}]
dynamic = ["version"]
dependencies = [
    "jupyter-book==0.13.0",
    "ipython==8.4.0",
    "autodoc_pydantic==1.6.2",
    "sphinx-autodoc-typehints==1.18.3"
]


[project.urls]
homepage = "https://github.com/wengroup/group_manual"
repository = "https://github.com/wengroup/group_manual"


[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"