[build-system]
requires = ["setuptools >= 42", "versioningit >= 2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["docs"]

[project]
name = "wen_group_manual"
requires-python = ">=3.9"
authors = [{name = "The Wen Group", email = "mjwengroup@gmail.com"}]
dynamic = ["version"]
dependencies = [
    "jupyter-book",
    "ipython",
    "autodoc_pydantic",
    "sphinx-autodoc-typehints"
]


[project.urls]
homepage = "https://github.com/wengroup/group_manual"
repository = "https://github.com/wengroup/group_manual"


[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"
